--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@ header:
 <!-----Contact Intro Section-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-5p">
-        <div class="pb-5p">
+    <div class="px-5p pt-5p sm:pt-2p">
+        <div class="pb-5p sm:pb-2p">
             <p class="title-font text-2xl sm:text-4xl editable">We look forward to hearing from you!</p>
         </div>
 
