--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -143,7 +143,7 @@ experience:
 ---
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-5p pb-5p sm:pb-0">
+  <div class="px-5p pt-5p sm:pt-2p pb-2p sm:pb-0">
         <p class="pb-5p sm:pb-2p editable"> At AJ Hackett Skypark, adventure awaits around every corner! Dive into a world of excitement with our exhilarating activities designed for thrill-seekers and families alike. Whether you’re soaring through the sky on our iconic bungy jumps, experiencing the rush of our giant swings, or gliding along breathtaking ziplines, each experience offers a unique way to challenge yourself and enjoy stunning views. Explore our sky-high attractions, including the Skybridge, Skycube, and the nostalgic Walk The Plank, or engage in fun-filled activities like luge rides, adventure parks, and climbing walls. Whatever your adrenaline level, there’s something for everyone to enjoy at AJ Hackett Skypark—come and create unforgettable memories!</p>
         <p class="editable"> Check out each individual experience of Skypark by AJ Hackett below.</p>
   </div> 
@@ -174,7 +174,7 @@ experience:
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pb-5p">
     {% for item in page.experience %}
-    <div class="pt-15p sm:pt-10p lg:pt-5p" id="{{ item.id }}">
+    <div class="pt-10p sm:pt-5p" id="{{ item.id }}">
         <h3 class="title-font text-2xl sm:text-4xl pb-2p 2xl:pb-1p">{{ item.name }}</h3>
         <hr class="pb-2p sm:pb-1p">
 
