--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -39,13 +39,13 @@ quote-image-position: 70% 10%
 <!-----Intro Section and Text-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-5p pb-10p sm:pb-0">
-        <div class="pb-5p">
+    <div class="px-5p pt-5p">
+        <div class="pb-2p">
             <p class="title-font text-2xl sm:text-4xl editable"> AJ Hackett is the kiwi innovator who built a business empire on adrenaline and adventure. </p>
         </div>
 
         <div class="sm:grid sm:grid-cols-2 mb-5p">
-            <div class="sm:pr-5p pb-10p sm:pb-5p">
+            <div class="sm:pr-5p pb-5p">
                 <p class="editable"> From a day in 1987 when he launched himself into the world's eye by leaping off the Eiffel Tower with a rubber cord attached to his feet, AJ Hackett has gone on to become one of New Zealand's most visible and unique entrepreneurs.
                 </p>
             </div>
@@ -55,7 +55,7 @@ quote-image-position: 70% 10%
         </div>
         
         <div class="sm:grid sm:grid-cols-2 mb-5p">
-            <div class="sm:hidden pt-5p pb-10p">
+            <div class="sm:hidden pb-5p">
                 <p class="editable"> The bungy jumping industry that he started has opened bold new avenues for tourism and has expanded the minds of millions of people worldwide. AJ Hackett’s personal life and business philosophies match his have-a-go ethos. Aptly, for a man who made his name encouraging others to jump off bridges, AJ Hackett is drawn to risk and has developed a knack for managing danger to create a safe and predictable environment for bungy jumpers.
                 </p>
             </div>
@@ -69,7 +69,7 @@ quote-image-position: 70% 10%
         </div>
 
         <div class="sm:grid sm:grid-cols-2 mb-5p">
-            <div class="sm:pr-5p pb-10p">
+            <div class="sm:pr-5p pb-5p">
                 <p class="editable"> In the commercial world, he has always preferred to leap boldly rather than to hold back. This has led to some hard lessons. The same taste for adventure that excited AJ Hackett as a child still drives the man today as he looks for new challenges and as his business moves into a period of unique growth and change.
                 </p>
             </div>
