--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -41,7 +41,7 @@ values-image-alt: AJ Hackett smiling into the camera.
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p">
                 <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Our Purpose </p>
-                <p class="pb-5p editable"> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible. </p>
+                <p class="pb-2p editable"> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible. </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
@@ -56,11 +56,11 @@ values-image-alt: AJ Hackett smiling into the camera.
 <!-----Promise-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p" id="promise">
+    <div class="px-5p pb-2p" id="promise">
         <div class="sm:grid sm:grid-cols-2 mb-5p">
             <div class="sm:pr-5p">
                 <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Our Promise </p>
-                <p class="pb-5p editable"> To act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. As a result, our promise is shifting our mindset from the inward-looking corporate visions and missions of the past to a fresh, open-minded perspective in which we can be a trusted adventure tourism operator for the future. </p>
+                <p class="pb-2p editable"> To act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. As a result, our promise is shifting our mindset from the inward-looking corporate visions and missions of the past to a fresh, open-minded perspective in which we can be a trusted adventure tourism operator for the future. </p>
             </div>
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
@@ -77,18 +77,18 @@ values-image-alt: AJ Hackett smiling into the camera.
 <section class="max-w-screen-2xl mx-auto">
     <div class="px-5p" id="values">
         <div class="sm:grid sm:grid-cols-2 mb-5p">
-            <div class="sm:pr-5p pb-5p">
+            <div class="sm:pr-5p pb-2p">
                 <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Our Values </p>
                 <p class="title-font text-xl editable">Respect</p>
-                <p class="pb-5p editable"> We value the communities and the environment we share, always acting responsibly and fully committing to open and honest relationships. </p>
+                <p class="pb-2p editable"> We value the communities and the environment we share, always acting responsibly and fully committing to open and honest relationships. </p>
                 <p class="title-font text-xl editable">Adventure</p>
-                <p class="pb-5p editable"> At the heart of what we do is personal adventure. Be bold like us. </p>
+                <p class="pb-2p editable"> At the heart of what we do is personal adventure. Be bold like us. </p>
                 <p class="title-font text-xl editable">Innovation</p>
-                <p class="pb-5p editable"> We embrace change, always striving to improve the way we work and develop our unique guest experience. </p>
+                <p class="pb-2p editable"> We embrace change, always striving to improve the way we work and develop our unique guest experience. </p>
                 <p class="title-font text-xl editable">Safety</p>
-                <p class="pb-5p editable"> We are trusted to manage risk and operate with a safety-first principle. </p>
+                <p class="pb-2p editable"> We are trusted to manage risk and operate with a safety-first principle. </p>
                 <p class="title-font text-xl editable">Experience</p>
-                <p class="pb-5p editable"> We create fun, memorable experiences for our customers and unforgettable employment opportunities for our team. </p>
+                <p class="pb-2p editable"> We create fun, memorable experiences for our customers and unforgettable employment opportunities for our team. </p>
             </div>
             <div class="relative h-full min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" 
