--- a/safety-management.html
+++ b/safety-management.html
@@ -27,12 +27,12 @@ header:
 
 <section class="max-w-screen-2xl mx-auto">
   <div class="px-5p pt-5p pb-5p">
-    <div class="pb-5p">
+    <div class="pb-2p">
         <p class="title-font text-2xl sm:text-4xl editable"> AJ Hackett International is committed to effectively managing health, safety, and welfare for all of our stakeholders. </p>
     </div>
 
-    <p class="pb-5p sm:pb-2p editable"> We strive to achieve a high level of safety for our customers and crew through the following methods:</p>
-    <ul class="list-disc pl-5p space-y-2 pr-5p">
+    <p class="pb-2p sm:pb-2p editable"> We strive to achieve a high level of safety for our customers and crew through the following methods:</p>
+    <ul class="list-disc pl-5p sm:space-y-2 pr-5p">
         <li class="pb-1 editable">Providing adequate control of health and safety risks arising from our work activities by complying with health and safety legislation.</li>
         <li class="pb-1 editable">Utilizing digital platforms for scheduled inspections and maintenance to ensure the safety of plant and equipment across our sites worldwide.</li>
         <li class="pb-1 editable">Ensuring all employees receive adequate and effective training and are competent to carry out their tasks safely.</li>
