--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -160,7 +160,7 @@ site:
 ---
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-5p pb-5p sm:pb-0">
+  <div class="px-5p pt-5p">
     <div>
         <p class="pb-2p editable"> 2020 shaped up to be a year unlike any other. On top of managing a global pandemic, we celebrated our 30th birthday in both Cairns and Normandie and launched our new brand identity—Skypark by AJ Hackett.</p>
         <p class="pb-2p editable"> Skypark celebrates everything that AJ Hackett is famous for: creating positively life-changing experiences through our range of gravity-defying activities while creating a destination of all-inclusive fun activities you will want to keep coming back for.</p>
@@ -200,10 +200,10 @@ site:
         </h4>
 
         <!-- Description -->
-        <p class="pb-10p sm:pb-2p 2xl:pb-1p">{{ item.description }}</p>
+        <p class="pb-5p sm:pb-2p 2xl:pb-1p">{{ item.description }}</p>
 
         <!-- Visit the site button -->
-        <div class="mb-2p mt-2p">
+        <div class="mb-10p mt-2p">
           <a href="{{ item.url }}" class="button" aria-label="{{ item.url-alt }}" target="_blank" rel="noopener noreferrer">Visit the site</a>
         </div>
       </div>
