--- a/timeline.html
+++ b/timeline.html
@@ -113,7 +113,7 @@ timeline:
 
 <section class="max-w-screen-2xl mx-auto"> 
   <div class="px-5p grid grid-cols-12 py-5p gap-5">
-    <div class="col-span-full pb-2p">
+    <div class="col-span-full">
         <p class="title-font text-2xl sm:text-4xl editable">The Timeline of AJ Hackett International</p>
     </div>
     <div class="col-span-full">
