--- a/community.html
+++ b/community.html
@@ -42,7 +42,7 @@ pondok-alt:
 
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p pt-5p pb-5p sm:pb-0">
+  <div class="px-5p pt-5p sm:pt-2p pb-5p sm:pb-0">
         <p class="pb-5p editable"> At AJ Hackett International, our commitment to community extends beyond thrilling adventures and breathtaking experiences. We deeply value the communities where we are located, recognizing the vital role they play in our success and mission. Our community-focused initiatives aim to foster meaningful connections, support local causes, and give back in impactful ways. From hosting charity events and participating in local projects to creating sustainable practices that benefit surrounding areas, we strive to make a positive difference. Discover how we are actively engaging with and contributing to the communities that inspire and support us. </p>
   </div>
 </section>
@@ -51,7 +51,7 @@ pondok-alt:
 <!---------------Events------------->
 <section class="max-w-screen-2xl mx-auto"> 
   <div class="px-5p pb-2p" id="events">
-    <p class="title-font text-2xl sm:text-4xl pb-5p editable"> Events </p>
+    <p class="title-font text-2xl sm:text-4xl pb-5p sm:pb-2p editable"> Events </p>
 
     <p class="title-font text-xl sm:text-2xl pb-2p editable"> Crazy Jump Day </p>
     <div class="sm:grid sm:grid-cols-2 gap-5">
@@ -78,8 +78,8 @@ pondok-alt:
 
 <!---------------Giving Back------------->
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p pb-5p" id="givingback">
-    <p class="title-font text-2xl sm:text-4xl pb-5p pt-5p editable"> Giving Back </p>
+  <div class="px-5p pb-5p sm:pb-2p" id="givingback">
+    <p class="title-font text-2xl sm:text-4xl pb-5p sm:pb-2p pt-5p editable"> Giving Back </p>
 
 
     <p class="title-font text-xl sm:text-2xl pb-2p editable"> Jump For Hope </p>
