--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ pondok:
 <!-----Meet AJ-------->
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-5p pb-5p sm:pb-0">
+  <div class="px-5p pt-5p sm:pt-2p pb-5p sm:pb-0">
     <div>
         <p class="title-font text-2xl sm:text-4xl pb-2p editable"> A warm welcome from AJ Hackett International </p>
-        <p class="mb-2p editable"> Welcome to the World of Adventure with AJ Hackett! Dive into the story of the man who turned adrenaline into an empire. Discover more about AJ Hackett's journey and vision.
+        <p class="mb-2p sm:mb-0 editable"> Welcome to the World of Adventure with AJ Hackett! Dive into the story of the man who turned adrenaline into an empire. Discover more about AJ Hackett's journey and vision.
         </p>
-        <div class="mb-10p sm:mb-5p mt-5p">
+        <div class="mb-10p sm:mb-5p mt-5p sm:mt-2p">
           <a href="/meet-aj-hackett.html" class="button" aria-label="Learn more about AJ Hackett and his adventure journey">Find out more</a>
         </div>
     </div>
@@ -86,12 +86,12 @@ pondok:
 
 <!------Skypark-------->
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-5p">
+  <div class="px-5p pt-2p">
     <div class="pb-2p">
       <p class="title-font text-2xl sm:text-4xl editable">Skypark by AJ Hackett</p>
     </div>
 
-    <p class="pb-10p sm:pb-5p editable">Dive into a world of unparalleled adventure at Skypark by AJ Hackett, where thrilling experiences and cutting-edge innovation come together. Our global network of Skyparks offers an array of heart-pounding activities set against breathtaking backdrops. From iconic bungy jumps and exhilarating giant swings to soaring ziplines and sky-high adventures like the Skybridge and Skycube, every moment is designed to push your limits and create unforgettable memories. Explore our diverse range of sky-high attractions and find your perfect adventure around the world!</p>
+    <p class="pb-10p sm:pb-2p editable">Dive into a world of unparalleled adventure at Skypark by AJ Hackett, where thrilling experiences and cutting-edge innovation come together. Our global network of Skyparks offers an array of heart-pounding activities set against breathtaking backdrops. From iconic bungy jumps and exhilarating giant swings to soaring ziplines and sky-high adventures like the Skybridge and Skycube, every moment is designed to push your limits and create unforgettable memories. Explore our diverse range of sky-high attractions and find your perfect adventure around the world!</p>
 
     <div class="grid grid-cols-1 md:grid-cols-2 md:gap-8">
       {% for item in page.site %}
@@ -124,7 +124,7 @@ pondok:
 <!-----Pondok Santi-------->
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-5p pb-5p">
+  <div class="px-5p pt-2p pb-2p">
     <div class="pb-2p">
       <p class="title-font text-2xl sm:text-4xl">Pondok Santi Estate, Gili Trawangan</p>
     </div>
@@ -139,7 +139,7 @@ pondok:
 
       <!-- Text Content -->
       <div class="col-span-1 pr-5p order-2 sm:order-none">
-        <p class="pb-10p sm:pb-5p pt-2p sm:pt-0 editable">Discover Pondok Santi Estate, a luxurious retreat nestled in the tranquil landscapes of Indonesia. Immerse yourself in serene beauty and exceptional comfort at our boutique resort, where every moment is designed to rejuvenate and inspire.</p>
+        <p class="pb-5p pt-2p sm:pt-0 editable">Discover Pondok Santi Estate, a luxurious retreat nestled in the tranquil landscapes of Indonesia. Immerse yourself in serene beauty and exceptional comfort at our boutique resort, where every moment is designed to rejuvenate and inspire.</p>
         <div class="mb-5p sm:mb-0 sm:mt-10p md:mt-5p">
           <a href="/pondok-santi-estate.html" class="button" aria-label="Learn more about Pondok Santi Estate, a luxurious retreat in Gili Trawangan">Find out more</a>
         </div>
