--- a/sustainability.html
+++ b/sustainability.html
@@ -62,14 +62,14 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
         <div class="sm:grid sm:grid-cols-2 grid-rows-2 gap-5">
             <!-- Text Content -->
             <div class="sm:col-span-1 sm:row-span-2 sm:pr-5p">
-                <p class="pb-5p editable"> At Pondok Santi Estate, we are committed to acting sustainably and preserving the serene beauty of the area. To do so, we have adopted a variety of initiatives, such as:</p>
-                <ul class="list-disc pl-5p space-y-2">
+                <p class="pb-2p editable"> At Pondok Santi Estate, we are committed to acting sustainably and preserving the serene beauty of the area. To do so, we have adopted a variety of initiatives, such as:</p>
+                <ul class="list-disc pl-5p sm:space-y-2">
                     <li class="pb-1 editable">Our bungalows are crafted primarily from local materials. </li>
                     <li class="pb-1 editable">We recycle all water used on the estate through our own treatment plant.</li>
                     <li class="pb-1 editable">To maintain the pristine beauty of our white sand beaches, we conduct daily beach clean-ups, and the estate organizes at least two extensive beach clean-ups each year, covering large areas of the coastline on Gili Trawangan.</li>
                     <li class="pb-1 editable">Recognizing the global issue of plastic pollution, Pondok Santi Estate takes a proactive stance by not selling or storing any plastic bottles or straws.</li>
                     <li class="pb-1 editable">We are proud that 90% of the food served at Pondok Santi Estate is locally grown, and we source our fish from local, sustainable fishermen whenever possible.</li>
-                    <li class="pb-5 editable">In our journey toward greater sustainability, we are exploring options for generating our own renewable energy, specifically solar and wind power, and establishing our own desalination plant to irrigate the land with processed ocean water.</li>
+                    <li class="pb-2p editable">In our journey toward greater sustainability, we are exploring options for generating our own renewable energy, specifically solar and wind power, and establishing our own desalination plant to irrigate the land with processed ocean water.</li>
                 </ul>
             </div>
 
@@ -97,13 +97,13 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
         <div class="sm:grid sm:grid-cols-2 gap-5">
             <!-- Text Content -->
              <!-- Image 1 -->
-            <div class="relative h-full min-h-30 sm:min-h-50 mt-5p">
+            <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-image }}" style="object-position: {{ page.cairns-position }};" alt="{{ page.cairns-alt }}" />
             </div>
             <div class="col-span-1 sm:pl-5p">
-                <p class="pb-5p editable"> In 2021, Skypark Cairns hired two ecologists and environmental consultant interns to undertake a Biodiversity Survey, Mapping, and Environmental Management Project on site. The purpose of the survey was to explore the native species prevalent through disused walking tracks and to understand the extent of invasive species present in the area.</p>
-                <p class="pb-5p editable"> There are 13 bioregions recognized in Queensland, each numbered and named based on its geographical characteristics or the most common vegetation type in that area. Cairns is located in the Wet Tropics Bioregion. Throughout this area, changes in vegetation types can be observed, such as the shift from rainforests and scrubs to eucalypt woodlands and open forests. Due to the diverse range of vegetation types, there is a significant difference in species found in the area. Changes in vegetation types across Skypark Cairns are influenced by factors including elevation, rainfall, and proximity to gullies and creeks.</p>
-                <p class="pb-5p editable"> The survey successfully produced a list of flora and fauna species, totaling 390 species (256 flora and 134 fauna) from 612 data entries. This list includes species physically observed during the biodiversity field surveys, those captured by camera traps, and species retrieved from online databases such as WildNet and ALA.</p>
+                <p class="pt-2p pb-2p editable"> In 2021, Skypark Cairns hired two ecologists and environmental consultant interns to undertake a Biodiversity Survey, Mapping, and Environmental Management Project on site. The purpose of the survey was to explore the native species prevalent through disused walking tracks and to understand the extent of invasive species present in the area.</p>
+                <p class="pb-2p editable"> There are 13 bioregions recognized in Queensland, each numbered and named based on its geographical characteristics or the most common vegetation type in that area. Cairns is located in the Wet Tropics Bioregion. Throughout this area, changes in vegetation types can be observed, such as the shift from rainforests and scrubs to eucalypt woodlands and open forests. Due to the diverse range of vegetation types, there is a significant difference in species found in the area. Changes in vegetation types across Skypark Cairns are influenced by factors including elevation, rainfall, and proximity to gullies and creeks.</p>
+                <p class="pb-2p editable"> The survey successfully produced a list of flora and fauna species, totaling 390 species (256 flora and 134 fauna) from 612 data entries. This list includes species physically observed during the biodiversity field surveys, those captured by camera traps, and species retrieved from online databases such as WildNet and ALA.</p>
                 <p class="editable"> The results of the biodiversity survey have helped our team better understand the environment we need to care for and will aid in developing future communication and interpretive content for our guests.</p>
             </div>
         </div>
@@ -135,7 +135,7 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Beehives------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-2p pb-5p" id="beehives">
+    <div class="px-5p pb-5p" id="beehives">
         <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Bee Hives at Souleuvre Viaduct </p>
 
         <div class="sm:grid sm:grid-cols-2 gap-5">
@@ -145,7 +145,7 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
             </div>
             <!-- Text Content -->
             <div class="col-span-1 sm:pl-5p mb-5p">
-                <p class="editable"> With the collaboration of a beekeeper, the site installed 15 beehives at the Souleuvre Viaduct. Honey bees play a crucial role in the reproduction of entomophilic plants (pollinated by insects, bees, butterflies). They contribute to nearly 80% of pollination in agriculture, providing a service valued at approximately 20 billion euros annually in Europe alone. The French honeybee death toll has skyrocketed in the past two decades, from an average of 5% of the colony per year in the 1990s to a minimum of 30% today—nearly a third of the colony every year. This decline has been widely attributed to climate change. If we lose the bees, we risk losing fruits, vegetables, and even grains. Bees are an integral part of biodiversity.</p>
+                <p class="pt-2p editable"> With the collaboration of a beekeeper, the site installed 15 beehives at the Souleuvre Viaduct. Honey bees play a crucial role in the reproduction of entomophilic plants (pollinated by insects, bees, butterflies). They contribute to nearly 80% of pollination in agriculture, providing a service valued at approximately 20 billion euros annually in Europe alone. The French honeybee death toll has skyrocketed in the past two decades, from an average of 5% of the colony per year in the 1990s to a minimum of 30% today—nearly a third of the colony every year. This decline has been widely attributed to climate change. If we lose the bees, we risk losing fruits, vegetables, and even grains. Bees are an integral part of biodiversity.</p>
             </div>
         </div>
     </div>
