--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@ gallery-images:
 ---
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-5p">
+    <div class="px-5p pt-2p">
         <p class="editable"> At AJ Hackett International, we're always pushing the boundaries of adventure and striving to enhance our offerings. We're excited to share some of our latest projects that are set to elevate the Skypark experience even further. From innovative upgrades to thrilling new features, we are dedicated to continually improving our sites to ensure that every visit is unforgettable. Here’s a look at what we’ve been working on and how we’re bringing new dimensions of excitement and comfort to our adventure parks around the globe. </p>
     </div>
 </section>
@@ -54,14 +54,14 @@ gallery-images:
 
 <!---------------Skypark Cairns Roof------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-5p pb-5p">
-        <p class="title-font text-2xl sm:text-4xl pb-5p editable">Skypark Cairns Roof </p>
+    <div class="px-5p pt-2p pb-5p lg:pb-2p">
+        <p class="title-font text-2xl sm:text-4xl pb-2p editable">Skypark Cairns Roof </p>
         <div class="sm:grid sm:grid-cols-2">
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-roof-image }}" style="object-position: {{ page.cairns-roof-position }};" alt="{{ page.cairns-roof-alt }}" />
             </div>
             <div class="sm:pl-5p">
-                <p class="py-2p editable"> In 2023, Skypark Cairns underwent renovations at the top of the tower. After four years of COVID, it was time to bring some changes to our site. </p>
+                <p class="py-2p xl:pb-2p xl:pt-0 editable"> In 2023, Skypark Cairns underwent renovations at the top of the tower. After four years of COVID, it was time to bring some changes to our site. </p>
                 <p class="editable"> The aim of this project was to enhance the overall experience on the tower by providing better shelter for patrons and an amazing viewing area from the roof with uninterrupted vistas of the rainforest and the Great Barrier Reef. Additionally, we improved our Jump Menu offerings with a flat launch platform on the roof and introduced a brand-new Back Jump area, offering new thrills for all our customers to enjoy. </p>
             </div>
         </div>
