--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -37,8 +37,8 @@ values-image-alt: AJ Hackett smiling into the camera.
 <!-----Purpose-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pt-5p" id="purpose">
-        <div class="sm:grid sm:grid-cols-2 mb-5p">
+    <div class="px-5p pt-5p lg:pt-2p" id="purpose">
+        <div class="sm:grid sm:grid-cols-2 mb-5p lg:mb-2p">
             <div class="sm:pr-5p">
                 <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Our Purpose </p>
                 <p class="pb-2p editable"> Our purpose is to positively change lives and help people all over the world overcome their personal barriers by achieving something they never thought possible. </p>
@@ -56,8 +56,8 @@ values-image-alt: AJ Hackett smiling into the camera.
 <!-----Promise-------->
 
 <section class="max-w-screen-2xl mx-auto">
-    <div class="px-5p pb-2p" id="promise">
-        <div class="sm:grid sm:grid-cols-2 mb-5p">
+    <div class="px-5p pb-2p lg:pb-0" id="promise">
+        <div class="sm:grid sm:grid-cols-2 mb-5p lg:mb-2p">
             <div class="sm:pr-5p">
                 <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Our Promise </p>
                 <p class="pb-2p editable"> To act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. As a result, our promise is shifting our mindset from the inward-looking corporate visions and missions of the past to a fresh, open-minded perspective in which we can be a trusted adventure tourism operator for the future. </p>
@@ -76,7 +76,7 @@ values-image-alt: AJ Hackett smiling into the camera.
 
 <section class="max-w-screen-2xl mx-auto">
     <div class="px-5p" id="values">
-        <div class="sm:grid sm:grid-cols-2 mb-5p">
+        <div class="sm:grid sm:grid-cols-2 mb-5p lg:mb-2p">
             <div class="sm:pr-5p pb-2p">
                 <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Our Values </p>
                 <p class="title-font text-xl editable">Respect</p>
