--- a/safety-management.html
+++ b/safety-management.html
@@ -26,7 +26,7 @@ header:
 ---
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-5p pb-5p">
+  <div class="px-5p pt-2p pb-5p lg:pb-2p">
     <div class="pb-2p">
         <p class="title-font text-2xl sm:text-4xl editable"> AJ Hackett International is committed to effectively managing health, safety, and welfare for all of our stakeholders. </p>
     </div>
