--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -160,21 +160,21 @@ site:
 ---
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pt-5p">
+  <div class="px-5p pt-2p">
     <div>
-        <p class="pb-2p editable"> 2020 shaped up to be a year unlike any other. On top of managing a global pandemic, we celebrated our 30th birthday in both Cairns and Normandie and launched our new brand identity—Skypark by AJ Hackett.</p>
-        <p class="pb-2p editable"> Skypark celebrates everything that AJ Hackett is famous for: creating positively life-changing experiences through our range of gravity-defying activities while creating a destination of all-inclusive fun activities you will want to keep coming back for.</p>
+        <p class="pb-2p lg:pb-1p editable"> 2020 shaped up to be a year unlike any other. On top of managing a global pandemic, we celebrated our 30th birthday in both Cairns and Normandie and launched our new brand identity—Skypark by AJ Hackett.</p>
+        <p class="pb-2p lg:pb-1p editable"> Skypark celebrates everything that AJ Hackett is famous for: creating positively life-changing experiences through our range of gravity-defying activities while creating a destination of all-inclusive fun activities you will want to keep coming back for.</p>
         <p class="editable"> Check out each individual site to experience the many worlds of Skypark by AJ Hackett.</p>
     </div>
   </div>
 </section>
 
 <section class="max-w-screen-2xl mx-auto">
-  <div class="px-5p pb-5p">
+  <div class="px-5p pb-2p">
     {% for item in page.site %}
-      <div id="section-{{ item.id }}" class="pt-5p">
-        <h3 class="title-font text-2xl sm:text-4xl pb-2p 2xl:pb-1p">{{ item.location }}</h3>
-        <hr class="pb-1p">
+      <div id="section-{{ item.id }}" class="pt-5p md:pt-2p">
+        <h3 class="title-font text-2xl sm:text-4xl pb-2p lg:pb-1p">{{ item.location }}</h3>
+        <hr class="pb-1p lg:pb-0">
 
         <!-- Large Featured Image -->
         <div class="relative h-full min-h-30 sm:min-h-50 mt-2p mb-1p 2xl:mt-1p">
@@ -193,17 +193,17 @@ site:
          </div>
 
          <!-- Location Links -->
-        <h4 class="uppercase text-xl sm:text-2xl py-2p">
+        <h4 class="uppercase text-xl sm:text-2xl py-2p lg:py-1p">
           {% for experience in item.experiences %}
               <a href="{{ experience.url }}" class="grow transition-transform duration-300 ease-in-out transform hover:scale-105">{{ experience.name }}</a>{% if forloop.last == false %} | {% endif %}
           {% endfor %}
         </h4>
 
         <!-- Description -->
-        <p class="pb-5p sm:pb-2p 2xl:pb-1p">{{ item.description }}</p>
+        <p class="pb-5p sm:pb-2p lg:pb-0">{{ item.description }}</p>
 
         <!-- Visit the site button -->
-        <div class="mb-10p mt-2p">
+        <div class="mb-5p xl:mb-2p mt-2p">
           <a href="{{ item.url }}" class="button" aria-label="{{ item.url-alt }}" target="_blank" rel="noopener noreferrer">Visit the site</a>
         </div>
       </div>
