--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@ header:
             </div>
         </div>
 
-        <div class="col-span-full my-10p lg:my-5p">
-            <p class="title-font text-3xl mb-5p pt-10p sm:pt-0">Our Locations</p>
+        <div class="col-span-full my-10p md:my-5p xl:my-1p">
+            <p class="title-font text-3xl mb-5p lg:mb-2p pt-10p sm:pt-0">Our Locations</p>
             <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <li class="p-5p bg-grey rounded-md">
                     <p class="text-lg font-medium pb-2p">International Office</p>
