--- a/reconciliation.html
+++ b/reconciliation.html
@@ -32,7 +32,7 @@ reconciliation-pdf: /reconciliation-ajhi.pdf
 
 <!---------------Reconciliation------------->
 <section class="max-w-screen-2xl mx-auto"> 
-  <div class="px-5p pt-5p pb-5p">
+  <div class="px-5p pt-2p pb-5p lg:pb-2p">
       <p class="title-font text-2xl sm:text-4xl pb-2p editable">Endorsement of Reflect RAP and Commitment to Reconciliation</p>
       <div class="sm:grid sm:grid-cols-3 gap-5">
           <!-- Text Content -->
