--- a/sustainability.html
+++ b/sustainability.html
@@ -43,11 +43,11 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 ---
 <!---------------Intro------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-5p pb-5p sm:pb-0">
-            <p class="pb-2p editable"> At AJ Hackett International, we are enhancing our framework to be more sustainable and responsible in our actions, and to better understand the consequences for living and the relationships that sustain our people and our business. Our businesses operate in a diverse society and changing environment, and we must inspire trust and be a force for good. </p>
-            <p class="pb-2p editable"> AJ Hackett International’s promise is to act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. </p>
-            <p class="pb-2p editable"> Our experiences uniquely inspire and engage people, providing education that promotes lifelong learning and conservation advocacy. </p>
-            <p class="pb-2p editable"> We are targeting carbon neutrality for all Skypark by AJ Hackett locations and other portfolio businesses well before the global push for 2030. </p>
+    <div class="px-5p pt-2p pb-5p sm:pb-0">
+            <p class="pb-2p lg:pb-1p editable"> At AJ Hackett International, we are enhancing our framework to be more sustainable and responsible in our actions, and to better understand the consequences for living and the relationships that sustain our people and our business. Our businesses operate in a diverse society and changing environment, and we must inspire trust and be a force for good. </p>
+            <p class="pb-2p lg:pb-1p editable"> AJ Hackett International’s promise is to act sustainably and be trusted for the care of our people, our customers, and the planet, while pursuing quality, creativity, and innovation in adventure tourism destinations. </p>
+            <p class="pb-2p lg:pb-1p editable"> Our experiences uniquely inspire and engage people, providing education that promotes lifelong learning and conservation advocacy. </p>
+            <p class="pb-2p lg:pb-1p editable"> We are targeting carbon neutrality for all Skypark by AJ Hackett locations and other portfolio businesses well before the global push for 2030. </p>
             <p class="editable"> Check out some of the sustainability practices at AJ Hackett International: </p>
     </div>
 </section>
@@ -57,11 +57,11 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Pondok Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-5p" id="pondoksustainability">
+    <div class="px-5p pt-5p lg:pt-2p" id="pondoksustainability">
         <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Sustainability Initiatives at Pondok Santi Estate </p>
         <div class="sm:grid sm:grid-cols-2 grid-rows-2 gap-5">
             <!-- Text Content -->
-            <div class="sm:col-span-1 sm:row-span-2 sm:pr-5p">
+            <div class="sm:col-span-1 sm:row-span-2 sm:pr-5p md:pr-0">
                 <p class="pb-2p editable"> At Pondok Santi Estate, we are committed to acting sustainably and preserving the serene beauty of the area. To do so, we have adopted a variety of initiatives, such as:</p>
                 <ul class="list-disc pl-5p sm:space-y-2">
                     <li class="pb-1 editable">Our bungalows are crafted primarily from local materials. </li>
@@ -92,7 +92,7 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Cairns Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pt-5p mb-5p" id="cairnssustainability">
+    <div class="px-5p pt-5p xl:pt-2p mb-5p 2xl:mb-2p" id="cairnssustainability">
         <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Cairns Biodiversity Survey, Mapping, and Environmental Management Project </p>
         <div class="sm:grid sm:grid-cols-2 gap-5">
             <!-- Text Content -->
@@ -100,8 +100,8 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
             <div class="relative h-full min-h-30 sm:min-h-50">
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.cairns-image }}" style="object-position: {{ page.cairns-position }};" alt="{{ page.cairns-alt }}" />
             </div>
-            <div class="col-span-1 sm:pl-5p">
-                <p class="pt-2p pb-2p editable"> In 2021, Skypark Cairns hired two ecologists and environmental consultant interns to undertake a Biodiversity Survey, Mapping, and Environmental Management Project on site. The purpose of the survey was to explore the native species prevalent through disused walking tracks and to understand the extent of invasive species present in the area.</p>
+            <div class="col-span-1 sm:pl-5p md:pl-0">
+                <p class="pt-2p lg:pt-0 pb-2p editable"> In 2021, Skypark Cairns hired two ecologists and environmental consultant interns to undertake a Biodiversity Survey, Mapping, and Environmental Management Project on site. The purpose of the survey was to explore the native species prevalent through disused walking tracks and to understand the extent of invasive species present in the area.</p>
                 <p class="pb-2p editable"> There are 13 bioregions recognized in Queensland, each numbered and named based on its geographical characteristics or the most common vegetation type in that area. Cairns is located in the Wet Tropics Bioregion. Throughout this area, changes in vegetation types can be observed, such as the shift from rainforests and scrubs to eucalypt woodlands and open forests. Due to the diverse range of vegetation types, there is a significant difference in species found in the area. Changes in vegetation types across Skypark Cairns are influenced by factors including elevation, rainfall, and proximity to gullies and creeks.</p>
                 <p class="pb-2p editable"> The survey successfully produced a list of flora and fauna species, totaling 390 species (256 flora and 134 fauna) from 612 data entries. This list includes species physically observed during the biodiversity field surveys, those captured by camera traps, and species retrieved from online databases such as WildNet and ALA.</p>
                 <p class="editable"> The results of the biodiversity survey have helped our team better understand the environment we need to care for and will aid in developing future communication and interpretive content for our guests.</p>
@@ -115,11 +115,11 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Normandie Sustainability------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p mt-5p" id="normandiesustainability">
+    <div class="px-5p mt-5p xl:mt-2p" id="normandiesustainability">
         <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Normandie Natura 2000 </p>
-        <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p">
+        <div class="sm:grid sm:grid-cols-2 gap-5 mb-5p xl:mb-2p">
             <!-- Text Content -->
-            <div class="col-span-1 sm:pr-5p">
+            <div class="col-span-1 sm:pr-5p md:pr-0">
                 <p class="editable"> The Normandie site is recognized as part of the Natura 2000 protected areas network. Natura 2000 is a network of protected areas covering Europe's most valuable and threatened species and habitats. It is the largest coordinated network of protected areas in the world, extending across all 27 EU Member States, both on land and at sea. The sites within Natura 2000 are designated under the Birds and Habitats Directives. These sites are designated to protect a number of habitats and species representative of European biodiversity. The precise list of these habitats and species is annexed to the European Birds Directive and the European Habitats-Fauna-Flora Directive.</p>
             </div>
             <!-- Image 1 -->
@@ -135,7 +135,7 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
 
 <!---------------Beehives------------->
 <section class="max-w-screen-2xl mx-auto"> 
-    <div class="px-5p pb-5p" id="beehives">
+    <div class="px-5p pb-5p xl:pb-2p" id="beehives">
         <p class="title-font text-2xl sm:text-4xl pb-2p editable"> Bee Hives at Souleuvre Viaduct </p>
 
         <div class="sm:grid sm:grid-cols-2 gap-5">
@@ -144,8 +144,8 @@ beehives-alt: 15 beehives at Souleuvre Viaduct, supporting local pollinators and
                 <img loading="lazy" class="absolute inset-0 w-full h-full object-cover rounded-3xl" src="{{ page.beehives-image }}" style="object-position: {{ page.beehives-position }};" alt="{{ page.beehives-alt }}" />
             </div>
             <!-- Text Content -->
-            <div class="col-span-1 sm:pl-5p mb-5p">
-                <p class="pt-2p editable"> With the collaboration of a beekeeper, the site installed 15 beehives at the Souleuvre Viaduct. Honey bees play a crucial role in the reproduction of entomophilic plants (pollinated by insects, bees, butterflies). They contribute to nearly 80% of pollination in agriculture, providing a service valued at approximately 20 billion euros annually in Europe alone. The French honeybee death toll has skyrocketed in the past two decades, from an average of 5% of the colony per year in the 1990s to a minimum of 30% today—nearly a third of the colony every year. This decline has been widely attributed to climate change. If we lose the bees, we risk losing fruits, vegetables, and even grains. Bees are an integral part of biodiversity.</p>
+            <div class="col-span-1 sm:pl-5p md:pl-0 mb-5p">
+                <p class="pt-2p lg:pt-0 editable"> With the collaboration of a beekeeper, the site installed 15 beehives at the Souleuvre Viaduct. Honey bees play a crucial role in the reproduction of entomophilic plants (pollinated by insects, bees, butterflies). They contribute to nearly 80% of pollination in agriculture, providing a service valued at approximately 20 billion euros annually in Europe alone. The French honeybee death toll has skyrocketed in the past two decades, from an average of 5% of the colony per year in the 1990s to a minimum of 30% today—nearly a third of the colony every year. This decline has been widely attributed to climate change. If we lose the bees, we risk losing fruits, vegetables, and even grains. Bees are an integral part of biodiversity.</p>
             </div>
         </div>
     </div>
