hide from google

--- a/accessibility.html
+++ b/accessibility.html
@@ -16,7 +16,7 @@ seo:
     - Inclusive adventure experiences
     - Accessible team bonding events
   social_image: /images/accessibility-aj-hackett-international-banner.jpg
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/accessibility-aj-hackett-international-banner.jpg
    position: 60% 50%
