--- a/community.html
+++ b/community.html
@@ -16,7 +16,7 @@ seo:
     - Skypark Cairns charity partnerships
     - community impact adventure tourism
   social_image: /images/community-aj-hackett-international.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/community-aj-hackett-international.png
    position: 50% 50%
