--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ seo:
     - Adventure Park Inquiry
     - Skypark Global Locations Contact
   social_image: /images/contact-aj-hackett-international.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/contact-aj-hackett-international.png
    position: 50% 50%
