--- a/experiences-aj-hackett.html
+++ b/experiences-aj-hackett.html
@@ -22,7 +22,7 @@ seo:
     - Sentosa Skypark
     - Normandie adventure park
   social_image: /images/family-swing-cairns-aj-hackett-international.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/family-swing-cairns-aj-hackett-international.png
    position: 27% 50%
