--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ seo:
     - Adventure travel
     - Adventure tourism safety
   social_image: /images/aj-hackett-international-banner-image.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/aj-hackett-international-banner-image.png
    position: 50% 50%
