--- a/meet-aj-hackett.html
+++ b/meet-aj-hackett.html
@@ -16,7 +16,7 @@ seo:
     - Adventure business
     - Extreme sports pioneer
   social_image: /images/meet-aj-hackett-aj-hackett-international.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/meet-aj-hackett-aj-hackett-international.png
    position: 50% 50%
