--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -16,7 +16,7 @@ seo:
     - Global Skyparks team
     - Innovation in adventure tourism
   social_image: /images/meet-the-team-aj-hackett-international-banner.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/meet-the-team-aj-hackett-international-banner.png
    position: 50% 50%
