--- a/pondok-santi-estate.html
+++ b/pondok-santi-estate.html
@@ -16,7 +16,7 @@ seo:
     - Gili Trawangan retreats
     - Elegant resorts in Indonesia
   social_image: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/pondok-santi-estate-on-gili-trawangan-lombok.png
    position: 70% 50%
