--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@ seo:
     - Skypark Cairns roof project
     - AJ Hackett adventure park updates
   social_image: /images/ongoing-projects-aj-hackett-international.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/ongoing-projects-aj-hackett-international.png
    position: 50% 50%
