--- a/purpose-promise-values.html
+++ b/purpose-promise-values.html
@@ -16,7 +16,7 @@ seo:
     - AJ Hackett International purpose
     - Adventure tourism promise and values
   social_image: /images/purpose-promise-values-aj-hackett-international.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/purpose-promise-values-aj-hackett-international.png
    position: 50% 50%
