--- a/reconciliation.html
+++ b/reconciliation.html
@@ -16,7 +16,7 @@ seo:
     - Reconciliation Australia commitment
     - Indigenous land stewardship
   social_image: /images/skypark-cairns-australia-aj-hackett-international.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/skypark-cairns-australia-aj-hackett-international.png
    position: 50% 50%
