--- a/safety-management.html
+++ b/safety-management.html
@@ -16,7 +16,7 @@ seo:
     - Safety equipment standards
     - Adventure activity safety procedures
   social_image: /images/safety-management-banner-aj-hackett-international.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/safety-management-banner-aj-hackett-international.png
    position: 50% 50%
