--- a/skypark-aj-hackett.html
+++ b/skypark-aj-hackett.html
@@ -19,7 +19,7 @@ seo:
     - Adrenaline experiences
     - Global adventure parks
   social_image: /images/skypark-aj-hackett-international-banner-image.jpg
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/skypark-aj-hackett-international-banner-image.jpg
    position: 20% 50%
