--- a/sustainability.html
+++ b/sustainability.html
@@ -18,7 +18,7 @@ seo:
     - Bee hives Souleuvre Viaduct
     - Natura 2000 Normandie
   social_image: /images/sustainability-aj-hackett-international-banner.png
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/sustainability-aj-hackett-international-banner.png
    position: 50% 50%
