--- a/timeline.html
+++ b/timeline.html
@@ -16,7 +16,7 @@ seo:
     - global adventure tourism
     - record-breaking bungy jumps
   social_image: /images/aj-hackett-international-timeline-banner-image.jpg
-  hide-from-google: true
+  hide-from-google: false
 header:
  - image: /images/aj-hackett-international-timeline-banner-image.jpg
    position: 50% 50%
